
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int EXIT_FAILURE ;
 int PROC_CPUINFO_LENGTH ;
 int dprintf (char*,char*) ;
 int exit (int ) ;
 char* memmem (char*,int,char*,int) ;
 int read_file (char*,char*,int) ;

int smap_smep_enabled() {
 char buffer[PROC_CPUINFO_LENGTH];
 char* path = "/proc/cpuinfo";
 int length = read_file(path, &buffer[0], PROC_CPUINFO_LENGTH);
 if (length == -1) {
  dprintf("[-] open/read(%s)\n", path);
  exit(EXIT_FAILURE);
 }

 int rv = 0;
 char* found = memmem(&buffer[0], length, "smep", 4);
 if (found != ((void*)0))
  rv += 1;
 found = memmem(&buffer[0], length, "smap", 4);
 if (found != ((void*)0))
  rv += 2;
 return rv;
}
